; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mwl/extr_if_mwl.c_mwl_agestations.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mwl/extr_if_mwl.c_mwl_agestations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mwl_softc = type { i32, i32, i32 }

@hz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @mwl_agestations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mwl_agestations(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mwl_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.mwl_softc*
  store %struct.mwl_softc* %5, %struct.mwl_softc** %3, align 8
  %6 = load %struct.mwl_softc*, %struct.mwl_softc** %3, align 8
  %7 = getelementptr inbounds %struct.mwl_softc, %struct.mwl_softc* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @mwl_hal_setkeepalive(i32 %8)
  %10 = load %struct.mwl_softc*, %struct.mwl_softc** %3, align 8
  %11 = getelementptr inbounds %struct.mwl_softc, %struct.mwl_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %1
  %15 = load %struct.mwl_softc*, %struct.mwl_softc** %3, align 8
  %16 = getelementptr inbounds %struct.mwl_softc, %struct.mwl_softc* %15, i32 0, i32 1
  %17 = load %struct.mwl_softc*, %struct.mwl_softc** %3, align 8
  %18 = getelementptr inbounds %struct.mwl_softc, %struct.mwl_softc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @hz, align 4
  %21 = mul nsw i32 %19, %20
  %22 = call i32 @callout_schedule(i32* %16, i32 %21)
  br label %23

23:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @mwl_hal_setkeepalive(i32) #1

declare dso_local i32 @callout_schedule(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
